--- a/Wristlist/app/src/main/res/layout/app_bar_base.xml
+++ b/Wristlist/app/src/main/res/layout/app_bar_base.xml
@@ -22,7 +22,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_dashboard"/>
+    <FrameLayout
+        android:paddingTop="60dp"
+        android:id="@+id/baseFrame"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
