--- a/Wristlist/app/src/main/res/layout/activity_dashboard.xml
+++ b/Wristlist/app/src/main/res/layout/activity_dashboard.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,11 +11,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="be.pxl.elision.wristlist.View.Dashboard.DashboardActivity">
+    tools:context="be.pxl.elision.wristlist.View.Dashboard.DashboardActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <fragment
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Dashboard activity" />
-</RelativeLayout>
+        android:id="@+id/fragment_bestellingen"
+        class = "be.pxl.elision.wristlist.View.Dashboard.OrdersCardFragment"/>
+
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragment_profile"
+        class = "be.pxl.elision.wristlist.View.Dashboard.ProfileCardFragment"/>
+</LinearLayout>
