--- a/Wristlist/app/src/main/res/layout/card_view.xml
+++ b/Wristlist/app/src/main/res/layout/card_view.xml
@@ -1,57 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- A CardView that contains a TextView -->
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="0dp"
+    android:layout_gravity="center"
+    android:layout_margin="5dp"
+    android:layout_weight="1"
+    android:padding="2dp"
+    card_view:cardCornerRadius="5dp">
 
-    <!-- A CardView that contains a TextView -->
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
-        android:padding="2dp"
-        card_view:cardCornerRadius="5dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="50dp"
+            android:background="@color/colorPrimaryDark"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
+            <ImageView
+                android:id="@+id/card_icon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:background="@color/colorPrimaryDark"
-                android:gravity="center">
+                android:src="@drawable/ic_shopping_cart_white" />
 
-                <ImageView
-                    android:id="@+id/card_icon"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_shopping_cart_white" />
-
-                <TextView
-                    android:id="@+id/card_title"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="5"
-                    android:gravity="center_vertical"
-                    android:text="Gebruiker"
-                    android:textColor="#ffffff"
-                    android:textSize="20dp" />
-            </LinearLayout>
-
-            <!--<ListView-->
-                <!--android:id="@+id/info_text"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="0dp"-->
-                <!--android:layout_weight="3" />-->
+            <TextView
+                android:id="@+id/card_title"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:gravity="center_vertical"
+                android:text="Gebruiker"
+                android:textColor="#ffffff"
+                android:textSize="20dp" />
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+        <LinearLayout
+            android:id="@+id/card_information"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp"></LinearLayout>
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
