--- a/Wristlist/app/src/main/res/layout/card_view.xml
+++ b/Wristlist/app/src/main/res/layout/card_view.xml
@@ -19,7 +19,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorPrimary"
             android:gravity="center"
             android:orientation="horizontal">
 
