--- a/Wristlist/app/src/main/res/values/colors.xml
+++ b/Wristlist/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimaryLight">#7887B5</color>
     <color name="colorPrimaryVariant">#9FA7C8</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorError">#cc0000</color>
 </resources>
