--- a/Wristlist/app/src/main/res/layout/card_view.xml
+++ b/Wristlist/app/src/main/res/layout/card_view.xml
@@ -21,6 +21,7 @@
             android:layout_height="50dp"
             android:background="@color/colorPrimary"
             android:gravity="center"
+            android:id="@+id/card_header"
             android:orientation="horizontal">
 
             <ImageView
