--- a/Wristlist/app/src/main/res/layout/activity_login.xml
+++ b/Wristlist/app/src/main/res/layout/activity_login.xml
@@ -12,11 +12,25 @@
     android:background="@color/colorPrimaryLight"
     tools:context="be.pxl.elision.wristlist.View.Login.LoginActivity">
 
-
     <EditText
+
+        android:id="@+id/editText_username"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_above="@+id/editText_password"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="text"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#c5c5c5"
+        android:textSize="22dp" />
+    <EditText
+        android:layout_marginLeft="30dp"
         android:id="@+id/editText_password"
+        android:layout_marginRight="30dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:ems="10"
@@ -29,21 +43,7 @@
         android:textColor="#FFFFFF"
         android:textColorHint = "#c5c5c5"/>
 
-    <EditText
 
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:id="@+id/editText_username"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:textSize="22dp"
-        android:hint="Username"
-        android:inputType="text"
-        android:layout_above="@+id/editText_password"
-        android:layout_centerHorizontal="true"
-        android:textColor="#FFFFFF"
-        android:textColorHint = "#c5c5c5"/>
 
     <Button
         android:text="Login"
