--- a/Wristlist/app/src/main/res/layout/activity_base_drawer.xml
+++ b/Wristlist/app/src/main/res/layout/activity_base_drawer.xml
@@ -9,8 +9,10 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_base" />
+    <FrameLayout
+        android:id="@+id/appBarFrame"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
