--- a/Wristlist/app/src/main/res/layout/activity_orders.xml
+++ b/Wristlist/app/src/main/res/layout/activity_orders.xml
@@ -10,4 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="be.pxl.elision.wristlist.View.Orders.OrdersActivity">
 
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragment_bestellingen"
+        class = "be.pxl.elision.wristlist.View.Orders.OrdersFragment" />
 </RelativeLayout>
