--- a/Wristlist/app/src/main/res/layout/card_view.xml
+++ b/Wristlist/app/src/main/res/layout/card_view.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="5dp"
     android:layout_weight="1"
