--- a/Wristlist/app/src/main/res/values/dimens.xml
+++ b/Wristlist/app/src/main/res/values/dimens.xml
@@ -6,4 +6,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="list_1_items">40dp</dimen>
+    <dimen name="list_2_items">80dp</dimen>
+    <dimen name="list_3_items">120dp</dimen>
+    <dimen name="list_4_items">160dp</dimen>
+    <dimen name="list_5_items">180dp</dimen>
+
 </resources>
