--- a/Wristlist/app/src/main/res/drawable/drawer_item_bg.xml
+++ b/Wristlist/app/src/main/res/drawable/drawer_item_bg.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="#F4F4F4" />
+            <solid android:color="@android:color/transparent" />
         </shape>
     </item>
 
@@ -11,13 +11,9 @@
         <shape>
             <solid android:color="@android:color/transparent" />
             <stroke
-                android:width="2dp"
+                android:width="1dp"
                 android:color="#EAEAEA" />
         </shape>
-        <!--
-        android:dashGap="10px"
-                android:dashWidth="10px"
-                -->
     </item>
 
 </layer-list>
