General layout changes

--- a/Wristlist/app/src/main/res/layout/activity_order.xml
+++ b/Wristlist/app/src/main/res/layout/activity_order.xml
@@ -4,14 +4,16 @@
     android:id="@+id/activity_order"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="be.pxl.elision.wristlist.View.Order.OrderActivity">
+
     <fragment
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fragment_order"
         class = "be.pxl.elision.wristlist.View.Order.OrderFragment" />
+
 </RelativeLayout>
