--- a/Wristlist/app/src/main/res/layout/orders_row.xml
+++ b/Wristlist/app/src/main/res/layout/orders_row.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp">
+    android:layout_margin="8dp" >
 
     <TextView
         android:id="@+id/row_title"
         android:layout_width="0dp"
         android:layout_weight="2"
         android:layout_height="wrap_content"
-        android:textSize="18dp"/>
+        android:textSize="18sp"/>
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
