--- a/Wristlist/app/src/main/res/layout/activity_dashboard.xml
+++ b/Wristlist/app/src/main/res/layout/activity_dashboard.xml
@@ -6,30 +6,35 @@
     android:id="@+id/activity_dashboard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="be.pxl.elision.wristlist.View.Dashboard.DashboardActivity"
     android:orientation="vertical">
 
     <fragment
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fragment_bestellingen"
-        class = "be.pxl.elision.wristlist.View.Dashboard.OrdersCardFragment"
-        />
+        class = "be.pxl.elision.wristlist.View.Dashboard.OrdersCardFragment" />
 
     <fragment
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fragment_profile"
-        class = "be.pxl.elision.wristlist.View.Dashboard.ProfileCardFragment"
-        android:layout_marginTop="16dp"/>
+        class = "be.pxl.elision.wristlist.View.Dashboard.ProfileCardFragment" />
+
     <Button
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Notification"
         android:id="@+id/button_notification"/>
+
 </LinearLayout>
