--- a/Wristlist/app/src/main/res/layout/card_view.xml
+++ b/Wristlist/app/src/main/res/layout/card_view.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="5dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginBottom="8dp"
     android:layout_weight="1"
     android:padding="2dp"
     card_view:cardCornerRadius="5dp">
@@ -39,15 +42,15 @@
                 android:gravity="center_vertical"
                 android:text="Gebruiker"
                 android:textColor="#ffffff"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/card_information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp"></LinearLayout>
+            android:orientation="vertical" />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
