--- a/Wristlist/app/src/main/res/layout/product_row.xml
+++ b/Wristlist/app/src/main/res/layout/product_row.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
-    android:minHeight="40dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_margin="8dp">
 
     <TextView
+        android:layout_margin="8dp"
         android:id="@+id/row_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
