--- a/Wristlist/app/src/main/res/layout/activity_profile.xml
+++ b/Wristlist/app/src/main/res/layout/activity_profile.xml
@@ -1,6 +1,5 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -48,6 +47,7 @@
                 android:layout_below="@id/firstnameTextView"
                 android:enabled="false"
                 android:inputType="text"
+                android:maxLength="20"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <TextView
@@ -68,6 +68,7 @@
                 android:layout_below="@id/lastnameTextView"
                 android:enabled="false"
                 android:inputType="text"
+                android:maxLength="30"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
         </RelativeLayout>
@@ -95,6 +96,7 @@
                 android:layout_below="@id/emailAddressTextView"
                 android:enabled="false"
                 android:inputType="textEmailAddress"
+                android:maxLength="50"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
 
@@ -134,6 +136,7 @@
                 android:layout_below="@id/addressLineTextView"
                 android:enabled="false"
                 android:inputType="text"
+                android:maxLength="60"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <TextView
@@ -154,6 +157,7 @@
                 android:layout_below="@id/cityTextView"
                 android:enabled="false"
                 android:inputType="text"
+                android:maxLength="40"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <TextView
@@ -174,6 +178,7 @@
                 android:layout_below="@id/postcodeTextView"
                 android:enabled="false"
                 android:inputType="text"
+                android:maxLength="8"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <TextView
@@ -194,6 +199,7 @@
                 android:layout_below="@id/phoneTextView"
                 android:enabled="false"
                 android:inputType="phone"
+                android:maxLength="12"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
         </RelativeLayout>
