--- a/Wristlist/app/src/main/res/layout/activity_order.xml
+++ b/Wristlist/app/src/main/res/layout/activity_order.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_order"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="be.pxl.elision.wristlist.View.Order.OrderActivity">
-
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:id="@+id/fragment_order_detail"
+        class="be.pxl.elision.wristlist.View.Order.OrderDetailFragment"/>
     <fragment
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
@@ -16,4 +25,4 @@
         android:id="@+id/fragment_order"
         class = "be.pxl.elision.wristlist.View.Order.OrderFragment" />
 
-</RelativeLayout>
+</LinearLayout>
